--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # Node modules
-backend/node_modules/
+**/node_modules/
 
 # Logs
 *.log
 
 # Environment files
 backend/.env
+frontend/.env
 
 # OS files
 .DS_Store
